@@ -32,6 +32,7 @@ Verilator 5.015 devel
 * Fix internal error on real conversion (#4447). [vdhotre-ventana]
 * Fix lifetime unknown error on enum.name (#4448). [jwoutersymatra]
 * Fix error on enum with VARHIDDEN of cell (#4482). [Michail Rontionov]
+* Fix reference to extended class in parameterized class (#4466).
 * Fix display %x formatting of real.
 * Fix mis-warning on #() in classes' own functions.
 
